# R2_ctrl

./: .gitignore  .gitmodules  AGENT.md  SPEC_R2_CONTROL.md  STATUS.md  TASKS.md
src/: README.md
src/r2_sldasm_description/: CMakeLists.txt  README.md  package.xml
src/r2_sldasm_description/config/: joint_limits.yaml
src/r2_sldasm_description/launch/: display.launch.py  gz_sim.launch.py
src/r2_sldasm_description/rviz/: r2_sldasm.rviz
src/r2_sldasm_description/scripts/: simplify_meshes_blender.py
src/r2_sldasm_description/urdf/: r2_sldasm.urdf.xacro
src/r2_sldasm_description/worlds/: lift_box_world.sdf
src/robocon_bringup/: package.xml  setup.cfg  setup.py
src/robocon_bringup/config/: dual_lidar.rviz  perception_bookmap.rviz
src/robocon_bringup/launch/: dual_lidar.launch.py  localization_scan_fusion.launch.py  minimal_bringup.launch.py  perception_foxglove.launch.py  perception_rviz.launch.py
src/robocon_bt_mission/: btplan.md  package.xml  setup.cfg  setup.py
src/robocon_bt_mission/behavior_trees/: simple_plum_bt.xml
src/robocon_bt_mission/launch/: mission_bt.launch.py  simple_plum_bt_demo.launch.py
src/robocon_bt_mission/resource/: robocon_bt_mission
src/robocon_bt_mission/robocon_bt_mission/: __init__.py  mission_bt_core.py  mission_bt_node.py  mock_plum_world_node.py
src/robocon_bt_mission/test/: test_bt_xml.py  test_mission_bt_core.py
src/robocon_interfaces/: CMakeLists.txt  package.xml
src/robocon_interfaces/action/: ClimbStep.action  DockToAruco.action  MoveCell.action  PickAdjacentBook.action
src/robocon_interfaces/msg/: BookMap.msg  CellState.msg  PlanStep.msg  PlumPlan.msg
src/robocon_interfaces/test/: test_interface_compile.cpp
src/robocon_localization/: package.xml  setup.cfg  setup.py
src/robocon_localization/launch/: scan_fuser.launch.py
src/robocon_localization/robocon_localization/: scan_fuser_core.py  scan_fuser_node.py
src/robocon_localization/test/: test_scan_fuser_core.py
src/robocon_perception/: README.md  package.xml  setup.cfg  setup.py
src/robocon_perception/config/: bookmap_lut.yaml
src/robocon_perception/launch/: bookmap.launch.py  bookmap_viz.launch.py
src/robocon_perception/robocon_perception/: __init__.py  bookmap_core.py  bookmap_node.py  bookmap_viz_core.py  bookmap_viz_node.py
src/robocon_perception/test/: test_bookmap_core.py  test_bookmap_viz_mapping.py
src/robocon_plum_planner/: README.md  package.xml  setup.cfg  setup.py
src/robocon_plum_planner/launch/: plum_planner.launch.py
src/robocon_plum_planner/resource/: robocon_plum_planner
src/robocon_plum_planner/robocon_plum_planner/: __init__.py  planner_core.py  plum_planner_node.py  team_mapping.py
src/robocon_plum_planner/test/: test_planner_core.py  test_team_mapping.py
