<?xml version="1.0"?>
<package format="3">
  <name>r2_sldasm_description</name>
  <version>0.1.0</version>
  <description>ROS 2 description package for r2_sldasm</description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>gz_sim_vendor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
