<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocon_interfaces</name>
  <version>0.0.0</version>
  <description>Interface package scaffold for R2 control stack</description>
  <maintainer email="rui0314rui@icloud.com">rui3510</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
